Bug 1604500 - Update relevance when synchronously updating the playback rate in UpdatePlaybackRate; r=boris

Differential Revision: https://phabricator.services.mozilla.com/D58737

--HG--
extra : moz-landing-system : lando